--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@nrwl/angular": "13.1.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -43,13 +44,16 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
+    "autoprefixer": "^10.4.16",
     "cypress": "^8.3.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.2.3",
     "jest-preset-angular": "10.0.1",
+    "postcss": "^8.4.32",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.19",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
