--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^12.2.0",
     "@nrwl/angular": "13.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "ng-zorro-antd": "^12.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
