--- a/libs/features/shell/feature/.eslintrc.json
+++ b/libs/features/shell/feature/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "project-angular",
+            "prefix": "ha",
             "style": "kebab-case"
           }
         ]
